# CPP.Projects

./: .gitignore  Readme.md  cpp_projects.code-workspace
02.Base_Constructor/: Ball.cpp  Ball.h  Football.cpp  Football.h  main.cpp
02.Class_independent/: account.cpp  main.cpp
03.Movies_rating/: movie.cpp  movie.h  movies.cpp
04.Password_encryption/: main.cpp  password.cpp  password.h
05.Accounts/: Account.cpp  Account.h  Account_Util.cpp  Account_Util.h  SavingAccount.cpp  SavingAccount.h  main.cpp
Age_calculator/: age_calculator.cpp  age_calculator.h  main.cpp
CMake_Hello/: CMakeLists.txt  main.cpp
Class_independent/: account.h
HelloC/: CMakeLists.txt  main.cpp
Movies_rating/: main.cpp  movie.cpp  movie.h  movies.cpp  movies.h
Multiply_with_matrix/: CMakeLists.txt  main.cpp
QT_Age_warning/: CMakeLists.txt  main.cpp
QT_Class_independent/: CMakeLists.txt  account.cpp  main.cpp
QT_HelloQMake/: main.cpp
QT_Static_class/: CMakeLists.txt
QT_cout/: CMakeLists.txt  main.cpp
QT_print/: CMakeLists.txt
Static_class/: main.cpp  player.cpp  player.h
_raylib-Template/: Template.code-workspace  main.cpp
raylib_ABC/: main.cpp
raylib_CircleAxeGame/: Makefile
raylib_Circle_axe_game/: main.cpp
raylib_MoveMouse/: MoveMouse.code-workspace
raylib_MovePop/: main.cpp
raylib_Move_Pop/: main.cpp
raylib_MovingObject-2/: main.cpp
raylib_Moving_object_in_boundary/: main.cpp
raylib_Setup_window/: main.cpp
